--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<div class="row justify-content-between main-header">
 					<div class="col-md-2 col-sm-4 col-4">
 						<div class="logo">
-							<img class="logo-img" src="images/3dglo.png" alt="...">
+							<img class="logo-img" src="" alt="логотип">
 
 						</div>
 					</div>
@@ -38,7 +38,7 @@
 							</div>
 							<div class="media-body">
 								<small>Есть вопросы? Звоните!</small>
-								<p class="phone">8 843 249-00-64</p>
+								<p class="phone">8 029 153 52 45</p>
 							</div>
 						</div>
 
@@ -335,25 +335,25 @@
 				<div class="col-md-4 col-sm-4 col-12">
 					<div class="connect-adress">
 						<img src="images/connect/phone.svg" alt="">
-						<p>+ 7 843 249 00 64</p>
+						<p>+375 29 153 52 45</p>
 					</div>
 					<div class="connect-adress">
 						<img src="images/connect/whatsapp.svg" alt="">
-						<p>+ 7 843 249 00 64</p>
+						<p>+ 375 29 153 52 45</p>
 					</div>
 					<div class="connect-adress">
 						<img src="images/connect/letter.svg" alt="">
-						<p>manager@glo-academy.ru</p>
+						<p>alexerdeader@gmail.com</p>
 					</div>
 					<div class="connect-adress">
 						<img src="images/connect/skype.svg" alt="">
-						<p>skype: glo-academy</p>
+						<p>skype: Александр Нестеров</p>
 					</div>
 					<div class="connect-adress">
 						<img src="images/connect/tele.svg" alt="">
-						<p>telegram: glo-academy</p>
+						<p>telegram: Александр Нестеров</p>
 					</div>
-					<p>График работы: с 9-00 до 18-00. Пн.-Пт.</p>
+					<p>График работы: с 8-00 до 17-00. Пн.-Пт.</p>
 				</div>
 			</div>
 		</div>
@@ -384,10 +384,10 @@
 			<div class="line"></div>
 			<div class="row">
 				<div class="col-md-6 col-sm-6 col-12 d-flex align-items-center">
-					<p>2020. Все права защищены</p>
+					<p>2022. Все права защищены</p>
 				</div>
 				<div class="col-md-6 col-sm-6 col-12 web">
-					<img src="./images/footer/academy.png" alt="">
+					<img src="" alt="логотип компании">
 				</div>
 			</div>
 		</div>
